--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "flux": "^3.1.3",
     "immutable": "^3.8.2",
     "react": "^16.1.1",
+    "react-bootstrap": "^0.32.1",
     "react-dom": "^16.1.1",
     "react-scripts": "1.0.17"
   },
