--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "daicraft",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "heroku-postbuild": "cd client && npm install --only=dev && npm install && npm run build"
   },
   "dependencies": {
     "body-parser": "~1.18.2",
@@ -15,5 +16,8 @@
     "mongodb": "^3.0.2",
     "morgan": "~1.9.0",
     "serve-favicon": "~2.4.5"
+  },
+  "engines": {
+    "node": "8.9.1"
   }
 }
