--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
   "dependencies": {
     "body-parser": "~1.18.2",
     "cookie-parser": "~1.4.3",
-    "debug": "~2.6.9",
-    "express": "~4.15.5",
+    "debug": "~4.1.1",
+    "express": "^4.16.4",
     "jade": "~1.11.0",
-    "lodash": "^4.17.5",
+    "lodash": "^4.17.11",
     "mongodb": "^3.0.2",
-    "morgan": "~1.9.0",
-    "serve-favicon": "~2.4.5"
+    "morgan": "^1.9.1",
+    "serve-favicon": "~2.5.0"
   },
   "engines": {
     "node": "8.9.1"
