--- a/client/package.json
+++ b/client/package.json
@@ -4,11 +4,11 @@
   "private": true,
   "dependencies": {
     "flux": "^3.1.3",
-    "immutable": "^3.8.2",
+    "immutable": "^4.0.0-rc.12",
     "react": "^16.1.1",
-    "react-bootstrap": "^0.32.1",
+    "react-bootstrap": "^1.0.0-beta.5",
     "react-dom": "^16.1.1",
-    "react-scripts": "1.0.17"
+    "react-scripts": "2.1.5"
   },
   "scripts": {
     "start": "react-scripts start",
