--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
     "heroku-postbuild": "cd client && npm install --only=dev && npm install && npm run build"
   },
   "dependencies": {
-    "body-parser": "~1.18.2",
-    "cookie-parser": "~1.4.3",
+    "body-parser": "^1.18.3",
+    "cookie-parser": "^1.4.4",
     "debug": "~4.1.1",
     "express": "^4.16.4",
     "jade": "~1.11.0",
     "lodash": "^4.17.11",
-    "mongodb": "^3.0.2",
+    "mongodb": "^3.1.13",
     "morgan": "^1.9.1",
     "serve-favicon": "~2.5.0"
   },
